# crowdroom

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  Proyecto TFG - Cola Colaborativa de Música.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
backend/: .env.dev.example  .env.example  .env.prod.example  __init__.py  alembic.ini  main.py
backend/adapters/: __init__.py  base.py  cache.py  factory.py  musicbrainz.py  spotify_auth_adapter.py  spotify_playback_adapter.py  spotify_search_adapter.py  spotify_utils.py
backend/api/: __init__.py  websocket.py
backend/core/: __init__.py  config.py  dependencies.py  encryption.py  exceptions.py  invite_token.py  network.py  room_code.py  security.py
backend/db/: __init__.py  database.py
backend/migrations/: env.py
backend/repositories/: __init__.py  platform_connection_repo.py  queue_history_repo.py  queue_repo.py  queue_vote_repo.py  room_ban_repo.py  room_invite_repo.py  room_member_repo.py  room_repo.py  session_repo.py  song_repo.py  user_repo.py
backend/schemas/: __init__.py  auth.py  invite_qr.py  platform_connection.py  playback.py  queue.py  queue_history.py  queue_item.py  queue_vote.py  room.py  room_invite.py  search.py  session.py  song.py  song_metadata.py  user.py  websocket_events.py
backend/services/: __init__.py  auth_service.py  fallback_service.py  invite_qr_service.py  music_service.py  platform_connection_service.py  playback_control_service.py  playback_poller_service.py  playback_service.py  queue_history_service.py  queue_service.py  queue_vote_service.py  room_invite_service.py  room_membership_service.py  (+7 more)
docker/: entrypoint.sh
docs/: modelos-bd.md
frontend/: .gitignore  eslint.config.js  index.html  invite.html  login.html  package.json  pnpm-lock.yaml  room.html  rooms.html  vite.config.js
(+148 files in other folders)
