[project]
name = "CrowdRoom"
version = "0.1.0"
description = "A real-time collaborative music streaming platform built with FastAPI and SQLModel."
readme = "README.md"
authors = [
    { name = "José Antonio Hernández Humanes", email = "hello@jaherhum.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
