[project]
name = "CrowdRoom"
version = "0.1.0"
description = "A real-time collaborative music streaming platform built with FastAPI and SQLModel."
readme = "README.md"
authors = [
    { name = "José Antonio Hernández Humanes", email = "hello@jaherhum.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
    "psycopg2-binary>=2.9.12",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.uv.build-backend]
module-root = ""
module-name = "backend"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [".git", ".venv", "__pycache__", "venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "D"]
ignore = ["B008", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"backend/migrations/**/*.py" = ["E501", "D"]
"backend/tests/**/*.py" = ["B", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"